--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -4,7 +4,10 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
-<body>
+
+<body style = "background-color:lightblue;">
+<h1>Calculator</h1>
+
 <form action = "/" method = "post">
 	First Number: <input type ="number" name = "firstNumber" required><br>
 	<select name = "operation">
